--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(../images/background.png);
+  background-image: url(../images/background1.jpg);
   background-repeat: no-repeat;
   margin: 0;
   background-size: cover;
